--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<div id="intro">
 						<h1>I am <br />
 						Plop</h1>
-						<p> My most personal portfollio showing all my past Work, projects and Games</p>
+						<p> My personal portfollio showing most my past Work, projects and Games</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
