--- a/index.html
+++ b/index.html
@@ -68,66 +68,66 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="https://streamable.com/61rfth" target= "_blank">Terrain Generation<br /></a></h2>
+										<h2><a href="https://youtu.be/f1iTdt3EiPs" target= "_blank">Terrain Generation<br /></a></h2>
 									</header>
 									<p>A simple Terrain Generation using perlin Noise and biomes, Kinda like Minecraft</p>
 									<ul class="actions special">
-										<li><a href="https://streamable.com/61rfth " target= "_blank" class="button">Check Out</a></li>
+										<li><a href="https://youtu.be/f1iTdt3EiPs" target= "_blank" class="button">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://streamable.com/w1t7l6" target= "_blank">Random Room Generation<br /></a></h2>
+										<h2><a href="https://youtu.be/EdRF4QHrsLM" target= "_blank">Random Room Generation<br /></a></h2>
 									</header>
 									<p>A type of Generation that is Used to Connect Rooms together, Similar To doors</p>
 									<ul class="actions special">
-										<li><a href="https://streamable.com/w1t7l6" target= "_blank" class="button">Check Out</a></li>
+										<li><a href="https://youtu.be/EdRF4QHrsLM" target= "_blank" class="button">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://streamable.com/re5q3c" target= "_blank">MiniMap System<br /></a></h2>
+										<h2><a href="https://youtu.be/Nk3YKC5ULx4" target= "_blank">MiniMap System<br /></a></h2>
 									</header>
 										A module Capable of making MiniMaps, and Supports WayPoints
 									<p>
 									<ul class="actions special">
-										<li><a href="https://streamable.com/re5q3c" target= "_blank" class="button">Check Out</a></li>
+										<li><a href="https://youtu.be/Nk3YKC5ULx4" target= "_blank" class="button">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://streamable.com/ev1glv" target= "_blank">Medieval Combat System<br /></a></h2>
+										<h2><a href="https://youtu.be/kU1xzuTmErU" target= "_blank">Medieval Combat System<br /></a></h2>
 									</header>
 									<p>Very Simple Combat System, Has Bows and arrows, Swords, Shield, and Daggers. </p>
 									<ul class="actions special">
-										<li><a href="https://streamable.com/ev1glv" target= "_blank" class="button">Check Out</a></li>
+										<li><a href="https://youtu.be/kU1xzuTmErU" target= "_blank" class="button">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://streamable.com/hi6wxt" target= "_blank">Parkour System<br /></a></h2>
+										<h2><a href="https://youtu.be/CyYss7o0Lhg" target= "_blank">Parkour System<br /></a></h2>
 									</header>
 									<p>Also a very simple Parkour System.</p>
 									<ul class="actions special">
-										<li><a href="https://streamable.com/hi6wxt" target= "_blank" class="button">Check Out</a></li>
+										<li><a href="https://youtu.be/CyYss7o0Lhg" target= "_blank" class="button">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://streamable.com/qehxu7" target= "_blank">Match Making<br /></a></h2>
+										<h2><a href="https://youtu.be/oz8Np3WLsms" target= "_blank">Match Making<br /></a></h2>
 									</header>
 									<p> A simple Match making System (In-Server), and Party System
 									<ul class="actions special">
-										<li><a href="https://streamable.com/qehxu7" target= "_blank" class="button">Check Out</a></li>
+										<li><a href="https://youtu.be/oz8Np3WLsms" target= "_blank" class="button">Check Out</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="https://streamable.com/gyjte4" target= "_blank">Gun System<br /></a></h2>
+										<h2><a href="https://youtu.be/pzvoddvJtTY" target= "_blank">Gun System<br /></a></h2>
 									</header>
 									<p> This includes A gun system (ignore Animations and model) with attachments, inventory System.
 									<ul class="actions special">
-										<li><a href="https://streamable.com/qehxu7" target= "_blank" class="button">Check Out</a></li>
+										<li><a href="https://youtu.be/pzvoddvJtTY" target= "_blank" class="button">Check Out</a></li>
 									</ul>
 								</article>
 							</section>
